tests/messages/errors/no_msh.hl7
PID|1||1004^^^HOSP^MR||Error^NoMSH||19900101|M
PV1|1|O|||||9999^Unknown
